--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body class="inter">
     <header>
       <nav class="flex max">
-        <h2>Tech<span>Wave</span></h2>
+        <h2 id="logo">Tech<span>Wave</span></h2>
 
         <ul class="flex">
           <a href="">
