--- a/index.html
+++ b/index.html
@@ -223,6 +223,46 @@
 
 
       </section>
+      <section class="about">
+
+    <div class="about-content max">
+          <h1>About the Podcast</h1>
+        <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+We break down complex topics into digestible insights, explore productivity strategies that actually work,
+and share stories of personal growth from industry leaders.
+<br> <br> <br> <br> 
+Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+<hr>
+    </div>
+      </section>
+
+
+      <section class="star-section">
+
+        
+
+       <div class="star-grid max">
+         <div class="star-content">
+          <h1>150K+</h1>
+          <p>Monthly Listeners</p>
+        </div>
+        <div class="star-content">
+          <h1>200+</h1>
+          <p>Episodes Published</p>
+        </div>
+        <div class="star-content">
+          <h1>4.9★</h1>
+          <p>Average Rating</p>
+        </div>
+        <div class="star-content">
+          <h1>50+</h1>
+          <p>Industry Expert</p>
+        </div>
+       </div>
+
+
+
+      </section>
     </main>
     <footer></footer>
   </body>
