added footer with responsiveness

--- a/index.html
+++ b/index.html
@@ -263,7 +263,40 @@ Join thousands of young professionals and tech enthusiasts who start their day w
 
 
       </section>
+
+
+
     </main>
-    <footer></footer>
+    <footer>
+   <div class="footer-container">
+       <div class="footer-content">
+        <h1>Tech<span>Wave</span></h1>
+        <div class="icons-grid">
+          <div class="icons flex">
+            <img id="margin-right" src="./images/spotify.png" alt="">
+            <p>Spotify</p>
+          </div>
+          <div class="icons flex">
+            <img src="./images/apple-podcast.png" alt="">
+            <p>Apple Podcast</p>
+          </div>
+          <div class="icons flex">
+            <img src="./images/youtube-podcast.png" alt="">
+            <p>Youtube</p>
+          </div>
+          <div id="margin" class="icons flex">
+            <img src="./images/twitter.png" alt="">
+            <p>Twitter</p>
+          </div>
+          
+
+
+        </div>
+        <p>© 2026 TechWave Podcast. All rights reserved.</p>
+
+
+      </div>
+   </div>
+    </footer>
   </body>
 </html>
